# interprocess-communication

./: CMakeLists.txt  Debug.rar  _close.bat  _start.bat  bel.txt  git.txt  kruchkova_5.2.sln
Buyer/: Buyer.cpp  Buyer.vcxproj  Buyer.vcxproj.filters  file.txt  stdafx.cpp
Buyer_6/: Buyer_6.cpp  Buyer_6.vcxproj  Buyer_6.vcxproj.filters
CerealTest/: CerealTest.cpp  CerealTest.vcxproj  CerealTest.vcxproj.filters  stdafx.cpp
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  FileMemory_2.cpp  FileMemory_2.h
Cook/: Cook.cpp  Cook.vcxproj  Cook.vcxproj.filters  stdafx.cpp
Courier/: Courier.cpp  Courier.vcxproj  Courier.vcxproj.filters  stdafx.cpp
Dispatcher/: Dispatcher.cpp  Dispatcher.vcxproj  Dispatcher.vcxproj.filters  stdafx.cpp
Fridge/: Fridge.cpp  Fridge.vcxproj  Fridge.vcxproj.filters  bel.txt  stdafx.cpp
Reader/: Reader.cpp  Reader.vcxproj  Reader.vcxproj.filters  stdafx.cpp
Shop_6/: Shop_6.cpp  Shop_6.vcxproj  Shop_6.vcxproj.filters  stdafx.cpp
Test/: Test.cpp  Test.vcxproj  Test.vcxproj.filters  Test_Print.cpp  Test_Print.h  my.cpp  my.h
WindowsProject1/: WindowsProject1.vcxproj
Writer/: Writer.cpp  Writer.vcxproj  Writer.vcxproj.filters  stdafx.cpp
kruchkova_5.2/: EndFlagFileMemory.cpp  EndFlagFileMemory.h  FileMemory.cpp  FileMemory.h  FileMemory_6.cpp  FileMemory_6.h  FileMemory_6_2.cpp  FileMemory_6_2.h  FileMemory_6_2_message.cpp  FileMemory_6_2_message.h  FileMemory_6_ToProducer.cpp  FileMemory_6_ToProducer.h  GenerateSemaphore.cpp  GenerateSemaphore.h  Message.cpp  Message.h  Message_6.cpp  Message_6.h  Message_6_2.cpp  Message_6_2.h  Message_Fridge.cpp  Message_Fridge.h  Message_arr_6.cpp  Message_arr_6.h  MySem.cpp  MySem.h  Person.cpp  Person.h  PersonType.cpp  PersonType.h  Products.cpp  Products.h  Tsemaphore.cpp  Tsemaphore.h  data.txt  kruchkova_5.2.cpp  kruchkova_5.2.vcxproj  kruchkova_5.2.vcxproj.filters  stdafx.cpp
